--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@android:style/Theme.DeviceDefault" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="Spotify" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
